--- a/formulario.css
+++ b/formulario.css
@@ -78,12 +78,8 @@ fieldset.grupo .campo {
     color: #ffff;
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 2);
-    text-shadow: 1px 1px 1px rgba (0, 0, 0, 5);
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 5);
+    position: left;
 }
 
 .botao:hover {
